kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/no_clash_because_priv/src/data.k
pub type Unit1 {
    .c: Unit1,
}

pub type Unit2 {
    .c: Unit2,
}

pub type Unit3 {
    .c: Unit3,
}
