kanc/src/tests/sample_code/should_fail/single_file/type_check/illegal_type/type_param.k
type U {
    u: U,
}

type Foo(x: U.u) {}
